[package]
name = "s2-dbpf"
version = "0.0.0"
edition = "2021"
rust-version = "1.56"
description = "A crate providing both types and read/write for Sims 2 Data formats"
authors = ["actioninja"]
license = "MPL-2.0"
repository = "https://github.com/actioninja/s2-dbpf"
readme = "README.md"
categories = ["encoding", "data-structures", "parser-implementations", "game-development"]
keywords = ["sims", "two", "dbpf", "package", "parsing"]


[dependencies]
binrw = "0.8"
const_format = "0.2.22"
proptest = "1.0.0"
test-strategy = "0.1.2"
debug_print = "1.0.0"
paste = "1.0.5"