[package]
name = "s2-dbpf-raw"
version = "0.0.0"
edition = "2021"
rust-version = "1.57"
description = "A crate providing both types and read/write for Sims 2 Data formats at a lower level"
authors = ["actioninja"]
license = "MPL-2.0"
repository = "https://github.com/actioninja/s2-dbpf"
readme = "README.md"
categories = ["encoding", "data-structures", "parser-implementations", "game-development"]
keywords = ["sims", "two", "dbpf", "package", "parsing"]


[dependencies]
s2-dbpf-raw-macros = { path = "macros" }
binrw = "0.10.0-rc.0"
const_format = "0.2.22"
derive_more = "0.99"
enum-as-inner = "0.5"
enum-assoc = "0.3"
enum_dispatch = "0.3"
refpack = "1.0.0"
slotmap = "1.0"
thiserror = "1.0"

[dev-dependencies]
paste = "1.0"
proptest = "1.0.0"
test-strategy = "0.2"
